kube-ingress/kubernetes_sample_app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: ingress-api
