kube-ingress/kubernetes_sample_app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp-ingress
spec:
  rules:
  - host: sampleapp.com
    http:
      paths:
      - path: /details
        pathType: Prefix
        backend:
          service:
            name: ingress-service
            port:
              number: 8000
      - path: /help
        pathType: Prefix
        backend:
          service:
            name: ingress-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-service
            port:
              number: 8000
